Fix horizontal scroll on homeepage

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -75,7 +75,7 @@ a.type-badge > span.badge:hover {
   border: none;
 }
 
-.list-inline-item {
+.list-inline-items {
   max-width: 25%;
 }
 
